feat: ✨ France devops 2025 rehearsal01 (#15)
* fix: 🐛 RAG parameter too optimistic

* fix: 🐛 Maven warning with JDK 24

* conf: ⬆️ Upgrade dependencies

* conf: ⬆️ Upgrade dependencies

* conf: ⬆️ Upgrade dependencies

* conf: ⬆️ Upgrade dependencies